feat: delete comment

--- a/src/components/GlobalStyles/GlobalStyles.css
+++ b/src/components/GlobalStyles/GlobalStyles.css
@@ -179,7 +179,9 @@ body {
 }
 
 body.ReactModal__Body--open {
-    overflow-y: hidden;
+    overflow-y: scroll;
+    position: fixed;
+    width: 100%;
 }
 
 input,
@@ -197,9 +199,10 @@ button {
     right: 0;
     left: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
     z-index: 99;
     display: block;
+    backdrop-filter: blur(2px);
 }
 
 .modal {
